--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <body>
         <h1>MOBILE COMPANIES</h1>
         <p>
-            <a href="file:///C:/Users/abdul/OneDrive/Documents/SAMSUNG/iphone.html" target="_blank">apple</a>
+            <a href="iphone.html" target="_blank">apple</a>
             <br>
-            <a href="file:///C:/Users/abdul/OneDrive/Documents/SAMSUNG/samsung.html" target="_blank">samsung</a>
+            <a href="samsung.html" target="_blank">samsung</a>
         </p>
     </body>
 </html>
