--- a/iphone.html
+++ b/iphone.html
@@ -12,7 +12,7 @@
             Founded in 1976 as Apple Computer Company by Steve Jobs, Steve Wozniak and Ronald Wayne, the company was incorporated by Jobs and Wozniak as Apple Computer, Inc. the following year. It was renamed Apple Inc. <br>
             in 2007 as the company had expanded its focus from computers to consumer electronics. Apple is the largest technology company by revenue, with US$391.04 billion in the 2024 fiscal year.<br>
         </p>
-        <img src="C:\Users\abdul\OneDrive\Pictures\Screenshots\iphone.png" width="500" height="500">
+        <img src="iphone.png" width="500" height="500">
         <table border="2" width="500" height="500" align="center" bgcolor="#FFCCCB">
             <caption>Mobile Pricing</caption>
             <tr bgcolor="#ADD8E6">
