--- a/samsung.html
+++ b/samsung.html
@@ -11,7 +11,7 @@
             <br><br>Samsung Electronics Co., Ltd. (SEC; stylized as SΛMSUNG; Korean: 삼성전자; RR: Samseong Jeonja; lit. Tristar Electronics) is a South Korean multinational major appliance and consumer electronics corporation founded on 13 January 1969 and headquartered in Yeongtong District, South Korea. <br>
             It is currently the pinnacle of the Samsung chaebol, accounting for 70% of the group's revenue in 2012,[4] and has played a key role in the group's corporate governance due to cross ownership.[5] It is majority-owned by foreign investors.
         </p>
-        <img src="C:\Users\abdul\OneDrive\Pictures\Screenshots\samsung2.png" width="500" height="500">
+        <img src="samsung2.png" width="500" height="500">
         <table border="2" width="500" height="500" align="center" bgcolor="#FFCCCB">
             <caption>Mobile Pricing</caption>
             <tr bgcolor="#ADD8E6">
